--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
-#quote-display{
+#quote-display, #quote-display-1, #quote-display-2{
     padding: 10px;
+    margin: 10px;
+}
+.flex-column{
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
